# finesse-benchmark

./: .gitignore  README.md  benchmark.leaderboard.yaml  licence  pyproject.toml
results/: benchmark_results.json  embeddings_merger_mode_finesse-benchmark-database.pt
src/finesse_benchmark/: __init__.py  benchmark.default.yaml  benchmark.leaderboard.yaml  cli.py  config.py  evaluator.py  implementations.py  inspect.py  interfaces.py  runner.py  scoring.py
