[project]
name = "finesse-benchmark"
version = "0.6.3"
description = "sophisticated evaluation framework designed to assess the performance of long-context embedding models on semantic understanding and information retention"
authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [

    # dependency problem with colab
    "pydantic~=2.11.0",
    "torch~=2.8.0",
    "datasets~=4.0.0",
    "pyarrow~=18.1.0",
    "click==8.1.3",

    # free-to-charge
    "transformers~=4.5.0",
    "seaborn~=0.13.0",
    "typer~=0.20.0",
    "litellm~=1.78.0",
    "matplotlib~=3.10.0",
    "tiktoken~=0.12.0"
]


[tool.poetry]
packages = [{ include = "finesse_benchmark", from = "src" }]

[tool.poetry.scripts]
finesse = "finesse_benchmark.cli:app"
