[project]
name = "finesse-benchmark"
version = "0.18.7"
description = "sophisticated evaluation framework designed to assess the performance of long-context embedding models on semantic understanding and information retention"
authors = [{ name = "winter.sci.dev", email = "enzoescipy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [

    # dependency problem with colab
    "pydantic==2.12.0",
    "torch==2.10.0",
    "datasets~=4.0.0",
    "pyarrow~=18.1.0",
    "typer~=0.24.1",
    "transformers~=5.0.0.0",

    # free-to-charge
    "seaborn~=0.13.0",
    "matplotlib~=3.10.0",
    "tiktoken~=0.12.0",

    "py-cpuinfo~=9.0.0",
    "einops~=0.8.1",

    "ruamel.yaml~=0.18"
]


[tool.poetry]
packages = [{ include = "finesse_benchmark", from = "src" }]

[tool.poetry.scripts]
finesse = "finesse_benchmark.cli:app"
